<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<View
    android:layout_width="match_parent"
    android:layout_height="2dp"
    android:background="@color/magenta"/>
    <TextView
        android:id="@+id/child_view_color_foot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/colorsetting"
        android:textColor="@color/darkgreen"
        android:textSize="@dimen/text_foot_size" />

    <TextView
        android:id="@+id/child_view_bgcolor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/board_color"
        android:textSize="@dimen/text_head_size"
        app:layout_constraintTop_toBottomOf="@id/child_view_color_foot"
        />
    <TextView
        android:id="@+id/child_view_bgcolor_text"
        android:layout_width="100dp"
        android:layout_height="13dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/antiquewhite"
        app:layout_constraintBottom_toBottomOf="@+id/child_view_bgcolor"
        app:layout_constraintStart_toEndOf="@+id/child_view_bgcolor"
        app:layout_constraintTop_toTopOf="@+id/child_view_bgcolor" />

    <View
        android:id="@+id/child_view_divider1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dividesize"
        android:layout_marginTop="@dimen/dividemargen"
        android:background="@color/black_overlay"
        app:layout_constraintTop_toBottomOf="@id/child_view_bgcolor_text" />

    <TextView
        android:id="@+id/child_view_bg_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dividemargen"
        android:text="@string/board_bg"
        android:textSize="@dimen/text_head_size"
        app:layout_constraintTop_toBottomOf="@id/child_view_divider1"
         />

    <TextView
        android:id="@+id/child_view_bg_pic_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/no_bg"
        android:textColor="@color/cadetblue"
        app:layout_constraintBottom_toBottomOf="@+id/child_view_bg_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/child_view_bg_pic"
        app:layout_constraintTop_toTopOf="@+id/child_view_bg_pic" />
    <View
        android:id="@+id/child_view_divider2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dividesize"
        android:layout_marginTop="@dimen/dividemargen"
        android:layout_marginBottom="@dimen/dividemargen"
        android:background="@color/black_overlay"
        app:layout_constraintTop_toBottomOf="@id/child_view_bg_pic"
        />
    <TextView
        android:id="@+id/child_view_paint_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dividemargen"
        android:text="@string/paint_color"
        android:textSize="@dimen/text_head_size"
        app:layout_constraintTop_toBottomOf="@id/child_view_divider2" />

    <TextView
        android:id="@+id/child_view_paintcolor_text"
        android:layout_width="100dp"
        android:layout_height="13dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/child_view_paint_color"
        app:layout_constraintStart_toEndOf="@+id/child_view_paint_color"
        app:layout_constraintTop_toTopOf="@+id/child_view_paint_color" />
    <View
        android:id="@+id/child_view_divider3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dividesize"
        android:layout_marginTop="@dimen/dividemargen"
        android:background="@color/black_overlay"
        app:layout_constraintTop_toBottomOf="@id/child_view_paint_color"
        />
    <!--不知道为什么，必须加这两个控件，不然会多出一大块空白-->
    <TextView
        android:id="@+id/a"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dividemargen"
        android:textSize="@dimen/text_head_size"
        app:layout_constraintTop_toBottomOf="@id/child_view_divider3" />

    <TextView
        android:id="@+id/child_view_paintcolor_text2"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/a"
        app:layout_constraintStart_toEndOf="@+id/a"
        app:layout_constraintTop_toTopOf="@+id/a" />
</android.support.constraint.ConstraintLayout>